<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/avatarTimeDialog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/android" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/dialog_notification_time_picker"
            android:textColor="@color/realBlack"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorBarNoti"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:background="@color/realBlack"
        android:orientation="vertical"></LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTimeDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/realBlack"
            android:text="Choose the time after that the application have to been notify"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textTimeDialog"
            android:gravity="center"
            android:paddingTop="25dp">

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:id="@+id/timeandHourtextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hoursText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/realBlack"
                    android:gravity="center"
                    android:text="@string/hours"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/hoursPicker"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/minutesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/realBlack"
                    android:text="@string/minutes"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/minutePicker"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmTimeDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:text="@string/confirm_button" />

        <Button
            android:id="@+id/cancelTimeDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:text="@string/cancel_button" />
    </LinearLayout>


</LinearLayout>
