<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/titleDialogPriorityckAvatr"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/android" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="Hi my Friend"
            android:textColor="@color/realBlack"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorBarNoti"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:background="@color/realBlack"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/colorBarNoti"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/IntensityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="italic"
            android:text="Set the priority for this app" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewPriorityNotificationDialog"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/androidhappy" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/lowPriorityRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#64DD17"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:text="@string/statistics_table_priority_low"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/midPriorityRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFEB3B"
                    android:layout_gravity="start"
                    android:text="@string/statistics_table_priority_mid"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/highPriorityRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FB8C00"
                    android:text="@string/statistics_table_priority_high"
                    android:layout_gravity="start"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/extremePriorityRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:buttonTint="#F44336"
                    android:text="@string/statistics_table_priority_extreme"
                    android:textColor="#000000" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>