<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trackdialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/titleDialogTrackAvatar"
            android:src="@drawable/android"

            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_track_title"
            android:textColor="@color/realBlack"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/colorBar"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/realBlack"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></LinearLayout>


    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:id="@+id/dialogTrackAppImage"
        android:src="@drawable/android" />

    <TextView
        android:layout_marginLeft="6dp"
        android:id="@+id/messageTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:text="Vuoi che monitori questa app per te?  "
        android:textColor="#000000" />
    </LinearLayout>


    <!--Material MID
    <LinearLayout
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:gravity="right"
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/noTrack"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/prom_colorPrimary"
            android:text="@string/dialog_track_no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/yesTrack"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/prom_colorPrimary"

            android:text="@string/dialog_track_yes"/>
    </LinearLayout> -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/yesTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:text="@string/dialog_track_yes" />

        <Button
            android:id="@+id/noTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:text="@string/dialog_track_no" />
    </LinearLayout>
</RelativeLayout>
